samples/_failures_safe/1761354091_daf259_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3d8daa54.c: In function ‘main’:
./samples/SAFE/__tmp_3d8daa54.c:137:5: error: expected expression at end of input
  137 |     for (size_t i = 0; i < sizeof(test_data); i++)
      |     ^~~
./samples/SAFE/__tmp_3d8daa54.c:137:5: error: expected declaration or statement at end of input
